Closed Bug 1884021 Opened 1 year ago Closed 1 year ago

dom/performance/Performance.cpp:609:8: error: unused variable '[startTimeStamp, endTimeStamp]' [-Werror,-Wunused-variable]

Categories

(Core :: DOM: Performance APIs, defect)

Unspecified
iOS
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building with --enable-project=mobile/ios --enable-warnings-as-errors:

 0:05.51 /tmp/gecko-ios/dom/performance/Performance.cpp:609:8: error: unused variable '[startTimeStamp, endTimeStamp]' [-Werror,-Wunused-variable]
 0:05.51   609 |   auto [startTimeStamp, endTimeStamp] =
 0:05.51       |        ^
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/1706d3050f8c Avoid warning about unused startTimeStamp/endTimeStamp in cases not using the values. r=profiler-reviewers,canaltinova
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: