Bug 1884021 - Avoid warning about unused startTimeStamp/endTimeStamp in cases not using the values. r=profiler-reviewers,canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D203842